2009-03-03  Badlop  <badlop@process-one.net>

	* src/ejabberd_listener.erl: Fix report message of 'undef' error

	* src/ejabberd_listener.erl: Fix a minor compilation warning and
	add EDoc comment

	* src/ejabberd_listener.erl: When stopping a listener, don't stop
	the listener supervisor (EJAB-874)

	* src/ejabberd_listener.erl: More error detections

	* src/ejabberd_config.erl: Check certfiles are readable on server
	start and listener start (EJAB-753)
	* src/ejabberd_listener.erl: Likewise

	* src/ejabberd_listener.erl: Report error at startup if a listener
	module isn't available or is not an ejabberd listener (EJAB-868)

	* src/mod_privacy.erl: Privacy List: deny presence-out all + send
	presence to: presence is sent (EJAB-255)
	* src/ejabberd_c2s.erl: Likewise

	* src/mod_privacy.erl: Only run roster_get_jid_info if privacy
	list has subscription or group (thanks to George Hazan)(EJAB-851).
	Sort items in privacy list by order before storing (EJAB-848)
	* src/mod_privacy.hrl: Likewise
	* src/mod_privacy_odbc.erl: Likewise

	* src/mod_muc/mod_muc_room.erl: Owner of a password protected room
	must provide the password, like other participants (EJAB-867)

	* src/mod_muc/mod_muc_log.erl: Prevent XSS in MUC logs by
	linkifying only a few known protocols (EJAB-850)

	* src/mod_muc/mod_muc.erl: Export function to create MUC
	room (thanks to Eric Cestari) (EJAB-729)

	* src/mod_roster.erl: When account is deleted, cancel presence
	subscription for all roster items (EJAB-790)
	* src/mod_roster_odbc.erl: Likewise

	* src/mod_shared_roster.erl: Fix bug: a pending subscription
	request, and later the requester added to the roster due to a
	shared roster group, that request could neither be accepted or
	rejected (thanks to Brian Cully)(EJAB-869)

	* src/web/ejabberd_http_poll.erl: Allow configuration of session
	timeout, using new global option http_poll_timeout (EJAB-135)
	* doc/guide.tex: Document new option
	* doc/guide.html: Likewise
